CMake: convert all LWS_USE_... to LWS_WITH_...
Almost all the CMake options begin with LWS_WITH_..., but many of the
symbols passed to lws are LWS_USE_... , this causes neededless confusion,
compounded by the fact that a few CMake options also begin with
LWS_USE_.

This patch globally converts all LWS_USE_... to LWS_WITH_..., so there
is only one prefix to remember in both CMake and the code.

The affected public CMake options are

LWS_USE_BORINGSSL     ->  LWS_WITH_BORINGSSL
LWS_USE_CYASSL        ->  LWS_WITH_CYASSL
LWS_USE_WOLFSSL       ->  LWS_WITH_WOLFSSL
LWS_USE_MBEDTLS       ->  LWS_WITH_MBEDTLS
LWS_USE_BUNDLED_ZLIB  ->  LWS_WITH_BUNDLED_ZLIB

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,23 +61,23 @@ if(GIT_EXECUTABLE)
     message("Git commit hash: ${LWS_BUILD_HASH}")
 endif()
 
-set(LWS_USE_BUNDLED_ZLIB_DEFAULT OFF)
+set(LWS_WITH_BUNDLED_ZLIB_DEFAULT OFF)
 if(WIN32)
-	set(LWS_USE_BUNDLED_ZLIB_DEFAULT ON)
+	set(LWS_WITH_BUNDLED_ZLIB_DEFAULT ON)
 endif()
 
 option(LWS_WITH_STATIC "Build the static version of the library" ON)
 option(LWS_WITH_SHARED "Build the shared version of the library" ON)
-option(LWS_WITH_SSL "Include SSL support (default OpenSSL, wolfSSL if LWS_USE_WOLFSSL is set)" ON)
-option(LWS_USE_BORINGSSL "Use BoringSSL replacement for OpenSSL" OFF)
-option(LWS_USE_CYASSL "Use CyaSSL replacement for OpenSSL. When setting this, you also need to specify LWS_CYASSL_LIBRARIES and LWS_CYASSL_INCLUDE_DIRS" OFF)
-option(LWS_USE_WOLFSSL "Use wolfSSL replacement for OpenSSL. When setting this, you also need to specify LWS_WOLFSSL_LIBRARIES and LWS_WOLFSSL_INCLUDE_DIRS" OFF)
-option(LWS_USE_MBEDTLS "Use mbedTLS (>=2.0) replacement for OpenSSL. When setting this, you also need to specify LWS_MBEDTLS_LIBRARIES and LWS_MBEDTLS_INCLUDE_DIRS" OFF)
+option(LWS_WITH_SSL "Include SSL support (default OpenSSL, wolfSSL if LWS_WITH_WOLFSSL is set)" ON)
+option(LWS_WITH_BORINGSSL "Use BoringSSL replacement for OpenSSL" OFF)
+option(LWS_WITH_CYASSL "Use CyaSSL replacement for OpenSSL. When setting this, you also need to specify LWS_CYASSL_LIBRARIES and LWS_CYASSL_INCLUDE_DIRS" OFF)
+option(LWS_WITH_WOLFSSL "Use wolfSSL replacement for OpenSSL. When setting this, you also need to specify LWS_WOLFSSL_LIBRARIES and LWS_WOLFSSL_INCLUDE_DIRS" OFF)
+option(LWS_WITH_MBEDTLS "Use mbedTLS (>=2.0) replacement for OpenSSL. When setting this, you also need to specify LWS_MBEDTLS_LIBRARIES and LWS_MBEDTLS_INCLUDE_DIRS" OFF)
 option(LWS_WITH_ZLIB "Include zlib support (required for extensions)" ON)
 option(LWS_WITH_LIBEV "Compile with support for libev" OFF)
 option(LWS_WITH_LIBUV "Compile with support for libuv" OFF)
 option(LWS_WITH_LIBEVENT "Compile with support for libevent" OFF)
-option(LWS_USE_BUNDLED_ZLIB "Use bundled zlib version (Windows only)" ${LWS_USE_BUNDLED_ZLIB_DEFAULT})
+option(LWS_WITH_BUNDLED_ZLIB "Use bundled zlib version (Windows only)" ${LWS_WITH_BUNDLED_ZLIB_DEFAULT})
 option(LWS_SSL_CLIENT_USE_OS_CA_CERTS "SSL support should make use of the OS-installed CA root certs" ON)
 option(LWS_WITHOUT_BUILTIN_GETIFADDRS "Don't use the BSD getifaddrs implementation from libwebsockets if it is missing (this will result in a compilation error) ... The default is to assume that your libc provides it. On some systems such as uclibc it doesn't exist." OFF)
 option(LWS_WITHOUT_BUILTIN_SHA1 "Don't build the lws sha-1 (eg, because openssl will provide it" OFF)
@@ -184,7 +184,7 @@ if (LWS_WITH_ESP32)
 	confirm_command(genromfs "install genromfs package")
 
  set(LWS_WITH_SHARED OFF)
- set(LWS_USE_MBEDTLS ON)
+ set(LWS_WITH_MBEDTLS ON)
   # set(LWS_WITHOUT_CLIENT ON)
  set(LWS_WITHOUT_TESTAPPS ON)
  set(LWS_WITHOUT_EXTENSIONS ON)
@@ -220,12 +220,12 @@ set(LWS_INSTALL_INCLUDE_DIR   include CACHE PATH "Installation directory for hea
 set(LWS_INSTALL_EXAMPLES_DIR  bin CACHE PATH "Installation directory for example files")
 
 # Allow the user to use the old CyaSSL options/library in stead of wolfSSL
-if (LWS_USE_CYASSL AND LWS_USE_WOLFSSL)
-	message(FATAL_ERROR "LWS_USE_CYASSL and LWS_USE_WOLFSSL are mutually exclusive!")
+if (LWS_WITH_CYASSL AND LWS_WITH_WOLFSSL)
+	message(FATAL_ERROR "LWS_WITH_CYASSL and LWS_WITH_WOLFSSL are mutually exclusive!")
 endif()
-if (LWS_USE_CYASSL)
+if (LWS_WITH_CYASSL)
 	# Copy CyaSSL options to the wolfSSL options
-	set(LWS_USE_WOLFSSL ${LWS_USE_CYASSL} CACHE BOOL "Use wolfSSL/CyaSSL instead of OpenSSL" FORCE)
+	set(LWS_WITH_WOLFSSL ${LWS_WITH_CYASSL} CACHE BOOL "Use wolfSSL/CyaSSL instead of OpenSSL" FORCE)
 	set(LWS_WOLFSSL_LIBRARIES ${LWS_CYASSL_LIBRARIES} CACHE PATH "Path to wolfSSL/CyaSSL libraries" FORCE)
 	set(LWS_WOLFSSL_INCLUDE_DIRS ${LWS_CYASSL_INCLUDE_DIRS} CACHE PATH "Path to wolfSSL/CyaSSL header files" FORCE)
 endif()
@@ -264,7 +264,7 @@ if (NOT LWS_WITH_SSL)
 	set(LWS_WITHOUT_BUILTIN_SHA1 OFF)
 endif()
 
-if (LWS_WITH_SSL AND NOT LWS_USE_WOLFSSL AND NOT LWS_USE_MBEDTLS)
+if (LWS_WITH_SSL AND NOT LWS_WITH_WOLFSSL AND NOT LWS_WITH_MBEDTLS)
 	if ("${LWS_OPENSSL_LIBRARIES}" STREQUAL "" OR "${LWS_OPENSSL_INCLUDE_DIRS}" STREQUAL "")
 	else()
 		if (NOT LWS_WITH_ESP32)
@@ -275,13 +275,13 @@ if (LWS_WITH_SSL AND NOT LWS_USE_WOLFSSL AND NOT LWS_USE_MBEDTLS)
 	endif()
 endif()
 
-if (LWS_WITH_SSL AND LWS_USE_WOLFSSL)
+if (LWS_WITH_SSL AND LWS_WITH_WOLFSSL)
 	if ("${LWS_WOLFSSL_LIBRARIES}" STREQUAL "" OR "${LWS_WOLFSSL_INCLUDE_DIRS}" STREQUAL "")
 		if (NOT WOLFSSL_FOUND)
-			if (LWS_USE_CYASSL)
-				message(FATAL_ERROR "You must set LWS_CYASSL_LIBRARIES and LWS_CYASSL_INCLUDE_DIRS when LWS_USE_CYASSL is turned on.")
+			if (LWS_WITH_CYASSL)
+				message(FATAL_ERROR "You must set LWS_CYASSL_LIBRARIES and LWS_CYASSL_INCLUDE_DIRS when LWS_WITH_CYASSL is turned on.")
 			else()
-				message(FATAL_ERROR "You must set LWS_WOLFSSL_LIBRARIES and LWS_WOLFSSL_INCLUDE_DIRS when LWS_USE_WOLFSSL is turned on.")
+				message(FATAL_ERROR "You must set LWS_WOLFSSL_LIBRARIES and LWS_WOLFSSL_INCLUDE_DIRS when LWS_WITH_WOLFSSL is turned on.")
 			endif()
 		endif()
 	else()
@@ -290,12 +290,12 @@ if (LWS_WITH_SSL AND LWS_USE_WOLFSSL)
 		set(WOLFSSL_FOUND 1)
 	endif()
 	set(USE_WOLFSSL 1)
-	if (LWS_USE_CYASSL)
+	if (LWS_WITH_CYASSL)
 		set(USE_OLD_CYASSL 1)
 	endif()
 endif()
 
-if (LWS_WITH_SSL AND LWS_USE_MBEDTLS)
+if (LWS_WITH_SSL AND LWS_WITH_MBEDTLS)
 	if ("${LWS_MBEDTLS_LIBRARIES}" STREQUAL "" OR "${LWS_MBEDTLS_INCLUDE_DIRS}" STREQUAL "" AND NOT LWS_WITH_ESP32)
 
 		find_path(LWS_MBEDTLS_INCLUDE_DIRS mbedtls/ssl.h)
@@ -313,7 +313,7 @@ if (LWS_WITH_SSL AND LWS_USE_MBEDTLS)
 		mark_as_advanced(LWS_MBEDTLS_INCLUDE_DIRS MBEDTLS_LIBRARY MBEDX509_LIBRARY MBEDCRYPTO_LIBRARY)
 
 		if ("${LWS_MBEDTLS_LIBRARIES}" STREQUAL "" OR "${LWS_MBEDTLS_INCLUDE_DIRS}" STREQUAL "")
-			message(FATAL_ERROR "You must set LWS_MBEDTLS_LIBRARIES and LWS_MBEDTLS_INCLUDE_DIRS when LWS_USE_MBEDTLS is turned on.")
+			message(FATAL_ERROR "You must set LWS_MBEDTLS_LIBRARIES and LWS_MBEDTLS_INCLUDE_DIRS when LWS_WITH_MBEDTLS is turned on.")
 		endif()
 	endif()
 	set(MBEDTLS_LIBRARIES ${LWS_MBEDTLS_LIBRARIES})
@@ -322,7 +322,7 @@ if (LWS_WITH_SSL AND LWS_USE_MBEDTLS)
 	set(USE_MBEDTLS 1)
 endif()
 
-if (LWS_WITH_ZLIB AND NOT LWS_USE_BUNDLED_ZLIB)
+if (LWS_WITH_ZLIB AND NOT LWS_WITH_BUNDLED_ZLIB)
 	if ("${LWS_ZLIB_LIBRARIES}" STREQUAL "" OR "${LWS_ZLIB_INCLUDE_DIRS}" STREQUAL "")
 	else()
 		set(ZLIB_LIBRARIES ${LWS_ZLIB_LIBRARIES})
@@ -410,27 +410,27 @@ if (LWS_WITHOUT_CLIENT)
 endif()
 
 if (LWS_WITH_LIBEV)
-	set(LWS_USE_LIBEV 1)
+	set(LWS_WITH_LIBEV 1)
 endif()
 
 if (LWS_WITH_LIBUV)
-	set(LWS_USE_LIBUV 1)
+	set(LWS_WITH_LIBUV 1)
 endif()
 
 if (LWS_WITH_LIBEVENT)
-	set(LWS_USE_LIBEVENT 1)
+	set(LWS_WITH_LIBEVENT 1)
 endif()
 
 if (LWS_IPV6)
-	set(LWS_USE_IPV6 1)
+	set(LWS_WITH_IPV6 1)
 endif()
 
 if (LWS_UNIX_SOCK)
-    set(LWS_USE_UNIX_SOCK 1)
+    set(LWS_WITH_UNIX_SOCK 1)
 endif()
 
 if (LWS_WITH_HTTP2)
-	set(LWS_USE_HTTP2 1)
+	set(LWS_WITH_HTTP2 1)
 endif()
 
 if ("${LWS_MAX_SMP}" STREQUAL "")
@@ -553,7 +553,7 @@ CHECK_INCLUDE_FILE(uv-version.h LWS_HAVE_UV_VERSION_H)
 endif()
 
 
-if (LWS_WITH_ZLIB AND NOT LWS_USE_BUNDLED_ZLIB)
+if (LWS_WITH_ZLIB AND NOT LWS_WITH_BUNDLED_ZLIB)
 	CHECK_INCLUDE_FILE(zlib.h LWS_HAVE_ZLIB_H)
 endif()
 
@@ -628,7 +628,7 @@ if (NOT LWS_WITHOUT_CLIENT)
 		lib/client-parser.c)
 endif()
 
-if (LWS_USE_MBEDTLS AND NOT LWS_WITH_ESP32)
+if (LWS_WITH_MBEDTLS AND NOT LWS_WITH_ESP32)
  	set(LWS_WITH_SSL ON)
 
 	list(APPEND HDR_PRIVATE
@@ -943,7 +943,7 @@ set(LIB_LIST)
 # ZLIB (Only needed for deflate extensions).
 #
 if (LWS_WITH_ZLIB)
-	if (LWS_USE_BUNDLED_ZLIB)
+	if (LWS_WITH_BUNDLED_ZLIB)
 		if (WIN32)
 			set(WIN32_ZLIB_PATH "win32port/zlib")
 			set(ZLIB_SRCS
@@ -989,7 +989,7 @@ endif()
 if (LWS_WITH_SSL)
 	message("Compiling with SSL support")
 	set(chose_ssl 0)
-	if (LWS_USE_WOLFSSL)
+	if (LWS_WITH_WOLFSSL)
 		# Use wolfSSL as OpenSSL replacement.
 		# TODO: Add a find_package command for this also.
 		message("wolfSSL include dir: ${WOLFSSL_INCLUDE_DIRS}")
@@ -999,7 +999,7 @@ if (LWS_WITH_SSL)
 		# the wolfssl/ subdirectory which contains the OpenSSL
 		# compatibility layer headers.
 
-		if (LWS_USE_CYASSL)
+		if (LWS_WITH_CYASSL)
 			foreach(inc ${WOLFSSL_INCLUDE_DIRS})
 				include_directories("${inc}" "${inc}/cyassl")
 			endforeach()
@@ -1013,7 +1013,7 @@ if (LWS_WITH_SSL)
 		set(chose_ssl 1)
 	endif()
 
-	if (LWS_USE_MBEDTLS)
+	if (LWS_WITH_MBEDTLS)
 		message("MBEDTLS include dir: ${MBEDTLS_INCLUDE_DIRS}")
 		message("MBEDTLS libraries: ${MBEDTLS_LIBRARIES}")
 
@@ -1026,7 +1026,7 @@ if (LWS_WITH_SSL)
 	endif()
 
 	if (NOT chose_ssl)
-		if (NOT OPENSSL_FOUND AND NOT LWS_USE_BORINGSSL)
+		if (NOT OPENSSL_FOUND AND NOT LWS_WITH_BORINGSSL)
 			# TODO: Add support for STATIC also.
 		if (NOT LWS_WITH_ESP32)
 			find_package(OpenSSL REQUIRED)
@@ -1044,7 +1044,7 @@ if (LWS_WITH_SSL)
 			list(APPEND LIB_LIST ${OPENSSL_LIBRARIES})
 		endif()
 
-	if (NOT LWS_USE_MBEDTLS)
+	if (NOT LWS_WITH_MBEDTLS)
 		# older (0.98) Openssl lacks this
 		set(CMAKE_REQUIRED_INCLUDES ${OPENSSL_INCLUDE_DIRS})
 		check_include_file(openssl/ecdh.h LWS_HAVE_OPENSSL_ECDH_H)
@@ -1054,7 +1054,7 @@ if (LWS_WITH_SSL)
 		endif()
 	else()
 		unset(LWS_HAVE_OPENSSL_ECDH_H)
-	endif(NOT LWS_USE_MBEDTLS)
+	endif(NOT LWS_WITH_MBEDTLS)
 	endif()
 
 endif(LWS_WITH_SSL)
@@ -1157,7 +1157,7 @@ CHECK_FUNCTION_EXISTS(SSL_set_info_callback LWS_HAVE_SSL_SET_INFO_CALLBACK)
 CHECK_FUNCTION_EXISTS(X509_VERIFY_PARAM_set1_host LWS_HAVE_X509_VERIFY_PARAM_set1_host)
 CHECK_FUNCTION_EXISTS(RSA_set0_key LWS_HAVE_RSA_SET0_KEY)
 
-if (LWS_USE_MBEDTLS)
+if (LWS_WITH_MBEDTLS)
 	set(LWS_HAVE_TLS_CLIENT_METHOD 1)
 	if (NOT LWS_WITH_ESP32)
 		# not supported in esp-idf openssl wrapper yet, but is in our version
@@ -1180,7 +1180,7 @@ configure_file(
 
 # Generate self-signed SSL certs for the test-server.
 
-if (LWS_WITH_SSL AND NOT LWS_USE_WOLFSSL)
+if (LWS_WITH_SSL AND NOT LWS_WITH_WOLFSSL)
 	message("Searching for OpenSSL executable and dlls")
 	find_package(OpenSSLbins)
 	message("OpenSSL executable: ${OPENSSL_EXECUTABLE}")
@@ -1636,7 +1636,7 @@ endif(LWS_WITH_GENERIC_SESSIONS)
 	# Copy OpenSSL dlls to the output directory on Windows.
 	# (Otherwise we'll get an error when trying to run)
 	#
-	if (WIN32 AND LWS_WITH_SSL AND NOT LWS_USE_WOLFSSL)
+	if (WIN32 AND LWS_WITH_SSL AND NOT LWS_WITH_WOLFSSL)
 		if(OPENSSL_BIN_FOUND)
 			message("OpenSSL dlls found:")
 			message("  Libeay: ${LIBEAY_BIN}")
@@ -1903,12 +1903,12 @@ message(" LWS_WITH_STATIC = ${LWS_WITH_STATIC}")
 message(" LWS_WITH_SHARED = ${LWS_WITH_SHARED}")
 message(" LWS_WITH_SSL = ${LWS_WITH_SSL} (SSL Support)")
 message(" LWS_SSL_CLIENT_USE_OS_CA_CERTS = ${LWS_SSL_CLIENT_USE_OS_CA_CERTS}")
-message(" LWS_USE_WOLFSSL = ${LWS_USE_WOLFSSL} (wolfSSL/CyaSSL replacement for OpenSSL)")
-if (LWS_USE_WOLFSSL)
+message(" LWS_WITH_WOLFSSL = ${LWS_WITH_WOLFSSL} (wolfSSL/CyaSSL replacement for OpenSSL)")
+if (LWS_WITH_WOLFSSL)
 	message("   LWS_WOLFSSL_LIBRARIES = ${LWS_WOLFSSL_LIBRARIES}")
 	message("   LWS_WOLFSSL_INCLUDE_DIRS = ${LWS_WOLFSSL_INCLUDE_DIRS}")
 endif()
-message(" LWS_USE_MBEDTLS = ${LWS_USE_MBEDTLS} (mbedTLS replacement for OpenSSL)")
+message(" LWS_WITH_MBEDTLS = ${LWS_WITH_MBEDTLS} (mbedTLS replacement for OpenSSL)")
 message(" LWS_WITHOUT_BUILTIN_SHA1 = ${LWS_WITHOUT_BUILTIN_SHA1}")
 message(" LWS_WITHOUT_BUILTIN_GETIFADDRS = ${LWS_WITHOUT_BUILTIN_GETIFADDRS}")
 message(" LWS_WITHOUT_CLIENT = ${LWS_WITHOUT_CLIENT}")
@@ -1924,9 +1924,9 @@ message(" LWS_WITHOUT_TEST_FRAGGLE = ${LWS_WITHOUT_TEST_FRAGGLE}")
 message(" LWS_WITHOUT_EXTENSIONS = ${LWS_WITHOUT_EXTENSIONS}")
 message(" LWS_WITH_LATENCY = ${LWS_WITH_LATENCY}")
 message(" LWS_WITHOUT_DAEMONIZE = ${LWS_WITHOUT_DAEMONIZE}")
-message(" LWS_USE_LIBEV = ${LWS_USE_LIBEV}")
-message(" LWS_USE_LIBUV = ${LWS_USE_LIBUV}")
-message(" LWS_USE_LIBEVENT = ${LWS_USE_LIBEVENT}")
+message(" LWS_WITH_LIBEV = ${LWS_WITH_LIBEV}")
+message(" LWS_WITH_LIBUV = ${LWS_WITH_LIBUV}")
+message(" LWS_WITH_LIBEVENT = ${LWS_WITH_LIBEVENT}")
 message(" LWS_IPV6 = ${LWS_IPV6}")
 message(" LWS_UNIX_SOCK = ${LWS_UNIX_SOCK}")
 message(" LWS_WITH_HTTP2 = ${LWS_WITH_HTTP2}")
