--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -688,15 +688,17 @@ endif()
 
 if (LWS_WITH_SSL)
 	list(APPEND SOURCES
-		lib/tls/tls.c
-		lib/misc/lws-genhash.c)
+		lib/tls/tls.c)
 		
 		if (LWS_WITH_MBEDTLS)
 			list(APPEND SOURCES
-				lib/tls/mbedtls/ssl.c)
+				lib/tls/mbedtls/ssl.c
+				lib/tls/mbedtls/lws-genhash.c)
 		else()
 			list(APPEND SOURCES
-				lib/tls/openssl/ssl.c)
+				lib/tls/openssl/ssl.c
+				lib/tls/openssl/lws-genhash.c
+			)
 		endif()
 		
 	if (NOT LWS_WITHOUT_SERVER)
